--- a/index.html
+++ b/index.html
@@ -1,142 +1,180 @@
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Orange Cat
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
-  <style>
-   body {
-            font-family: 'Roboto', sans-serif;
-        }
-  </style>
- </head>
- <body class="bg-black text-white">
-  <!-- Header -->
-  <header class="flex justify-between items-center p-6 bg-black">
-   <div class="flex items-center"><a href="index.html">
-    <img alt="Orange Cat Logo" class="mr-3" height="40" src="assets/logo.svg" width="40"/></a>
-    <span class="text-xl font-bold">
-        Orange Cat
-    </span>
-   </div>
-   <nav class="space-x-6">
-    <a class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full" href="team.html">
-     The Team
-    </a>
-    <a class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full" href="aboutus.html">
-     Company
-    </a>
-    <a class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full" href="portfolio.html">
-     Portfolio
-    </a>
-   </nav>
-  </header>
-  <!-- Hero Section -->
-  <section class="flex flex-col md:flex-row items-center justify-between p-12 bg-black">
-   <div class="md:w-1/2">
-    <h1 class="text-4xl md:text-5xl font-bold mb-6">
-     Start your Journey Today
-    </h1>
-    <p class="text-lg mb-6">
-     At Human, we're driven to help people &amp; their organizations achieve more of what matters. We help you to digitally evolve with innovations such as AI, data &amp; hyper-automation.
-    </p>
-    <p class="text-lg mb-6">
-     We're your partner from the first value discovery workshop all the way to global roll out when it comes to those innovative projects with higher uncertainty, faster iteration cycles &amp; change management needs.
-    </p>
-    <button class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full">
-     Get in Touch
-    </button>
-   </div>
-   <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center">
-    <img alt="Empowering Your Vision with Orange Cat" src="assets/phonecat.svg" width="300"/>
-   </div>
-  </section>
-  <!-- Our Work Section -->
-  <section class="p-12 bg-white text-gray-900">
-   <h2 class="text-4xl font-bold mb-6">
-    Our Work
-   </h2>
-   <div class="flex flex-col md:flex-row items-center">
-    <div class="md:w-1/2">
-     <p class="text-lg mb-6">
-      Revolutionizing the world of code, meet
-      <span class="font-bold">
-       Lagrange
-      </span>
-      our word powered coding assistant
-     </p>
-     <button class="bg-gray-800 text-white font-bold py-2 px-6 rounded-full">
-      <a href="lagrange.html">Learn More</a>
-     </button>
-    </div>
-    <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center">
-     <img alt="Lagrange Coding Assistant Interface" class="w-full h-auto" height="300" src="assets/lagrange.svg" width="500"/>
-    </div>
-   </div>
-  </section>
-  <!-- Footer -->
-  <footer class="p-12 bg-black text-white">
-   <div class="border-t border-gray-700 pt-6">
-    <div class="flex flex-col md:flex-row justify-between items-center">
-     <div class="flex items-center mb-6 md:mb-0">
-      <img alt="Orange Cat Logo" class="mr-3" height="40" src="assets/logo.svg" width="40"/>
-      <div>
-       <span class="text-xl font-bold">
-        Orange Cat
-       </span>
-       <p class="text-sm">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-       </p>
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Orange Cat</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+      body {
+        font-family: "Montserrat", sans-serif;
+      }
+      select option {
+        background-color: #151515;
+      }
+    </style>
+    <script src="app.js"></script>
+  </head>
+  <body class="bg-[#151515] text-white">
+    <!-- Header -->
+    <header class="flex justify-between items-center h-20 w-10/12 mx-auto">
+      <a href="index.html">
+        <div class="flex items-center">
+          <img
+            alt="Orange Cat Logo"
+            class="mr-3"
+            height="40"
+            src="assets/logo.svg"
+          />
+          <span class="text-xl font-bold"> Orange Cat </span>
+        </div>
+      </a>
+      <nav class="space-x-6 hidden md:flex">
+        <a
+          class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full"
+          href="team.html"
+        >
+          The Team
+        </a>
+        <a
+          class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full"
+          href="aboutus.html"
+        >
+          Company
+        </a>
+        <a
+          class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full"
+          href="portfolio.html"
+        >
+          Portfolio
+        </a>
+      </nav>
+
+      <nav class="md:hidden">
+        <select
+          id="mobileMenu"
+          class="w-full py-2 px-3 border border-gray-300 bg-transparent rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+          onchange="navigateTo(this.value)"
+        >
+          <option value="">Menu</option>
+          <option value="team.html">The Team</option>
+          <option value="aboutus.html">Company</option>
+          <option value="portfolio.html">Portfolio</option>
+        </select>
+      </nav>
+    </header>
+    <!-- Hero Section -->
+    <section
+      class="flex flex-col md:flex-row items-center justify-between py-8 mx-auto w-10/12"
+    >
+      <div class="md:w-1/2 md:text-left text-center">
+        <h1 class="text-4xl md:text-5xl font-bold mb-6">
+          Start your Journey Today
+        </h1>
+        <p class="text-lg mb-6">
+          At Human, we're driven to help people &amp; their organizations
+          achieve more of what matters. We help you to digitally evolve with
+          innovations such as AI, data &amp; hyper-automation.
+        </p>
+        <p class="text-lg mb-6">
+          We're your partner from the first value discovery workshop all the way
+          to global roll out when it comes to those innovative projects with
+          higher uncertainty, faster iteration cycles &amp; change management
+          needs.
+        </p>
+        <button class="bg-white text-gray-900 font-bold py-2 px-6 rounded-full">
+          Get in Touch
+        </button>
       </div>
-     </div>
-     <div class="flex space-x-6">
-      <div>
-       <h3 class="font-bold mb-2">
-        Follow us
-       </h3>
-       <ul>
-        <li>
-         <a class="text-white" href="https://www.linkedin.com/company/orangecat-technologies-pvt-ltd">
-          LinkedIn
-         </a>
-        </li>
-        <li>
-         <a class="text-white" href="#">
-          Facebook
-         </a>
-        </li>
-        <li>
-         <a class="text-white" href="#">
-          GitHub
-         </a>
-        </li>
-       </ul>
+      <img
+        alt="Empowering Your Vision with Orange Cat"
+        src="assets/phonecat.svg"
+        class="md:mt-0 mt-8"
+      />
+    </section>
+    <!-- Our Work Section -->
+    <section
+      class="py-8 md:pl-32 pl-0 bg-white text-gray-900 space-y-12 overflow-hidden relative"
+    >
+      <h2 class="text-4xl md:text-6xl text-left mx-auto w-10/12 md:w-full">
+        Our Work
+      </h2>
+      <div
+        class="flex flex-col md:flex-row items-start justify-between mx-auto w-10/12 md:w-full"
+      >
+        <div class="md:w-1/3 flex flex-col gap-6">
+          <p class="text-xl tracking-wider">
+            Revolutionizing the world of code, meet
+            <span class="font-bold"> Lagrange </span>
+            our word powered coding assistant
+          </p>
+          <button
+            class="bg-gray-800 text-white font-bold py-2 px-6 rounded-full w-fit"
+          >
+            <a href="lagrange.html">Learn More</a>
+          </button>
+          <img
+            src="assets/hellocat.svg"
+            loading="lazy"
+            alt=""
+            class="absolute -bottom-48 left-0 hidden xl:flex"
+          />
+        </div>
+        <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center">
+          <img
+            alt="Lagrange Coding Assistant Interface"
+            src="assets/lagrange.svg"
+            loading="lazy"
+            class="scale-125 xl:-ml-40 ml-0 mt-16 xl:mt-0"
+          />
+        </div>
       </div>
-      <div>
-       <h3 class="font-bold mb-2">
-        Contact
-       </h3>
-       <ul>
-        <li>
-         <a class="text-white" href="mailto:vidhan@orangcat.ai">
-          Email
-         </a>
-        </li>
-       </ul>
+    </section>
+    <!-- Footer -->
+    <footer class="text-gray-300 py-16 flex flex-col gap-16">
+      <div class="w-10/12 h-px bg-white mx-auto"></div>
+      <div class="w-10/12 mx-auto px-4">
+        <div
+          class="flex flex-col md:flex-row justify-between items-start md:items-center"
+        >
+          <div class="mb-6 md:mb-0">
+            <div class="flex items-center mb-2">
+              <img src="assets/logo.svg" alt="" />
+              <span class="text-xl font-semibold ml-2">Orange Cat</span>
+            </div>
+            <p class="text-sm mb-4 max-w-md font-normal">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet.
+            </p>
+            <p class="text-xs font-normal">&copy; 2024 Orange cat Pvt Ltd</p>
+          </div>
+          <div class="flex flex-row justify-between md:w-fit w-full gap-12">
+            <div>
+              <h3 class="text-lg font-light mb-2">Follow us</h3>
+              <ul class="space-y-2 font-normal text-white">
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">GitHub</a></li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="text-lg font-light mb-2">Contact</h3>
+              <ul class="space-y-2 font-normal text-white">
+                <li><a href="mailto:info@orangecat.com">Email</a></li>
+                <li><a href="#">Support</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-     </div>
-    </div>
-    <div class="mt-6 text-center">
-     <p class="text-sm">
-      © 2024 Orange Cat Pvt Ltd
-     </p>
-    </div>
-   </div>
-  </footer>
- </body>
+    </footer>
+  </body>
 </html>
