--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orange Cat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -7,12 +10,12 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <script src="app.js"></script>
   </head>
-  <body class="bg-[#151515] text-white">
+  <body class="bg-[#151515] text-white flex flex-col min-h-screen">
     <!-- Header -->
     <header class="flex justify-between items-center h-20 w-10/12 mx-auto">
       <a href="index.html">
@@ -23,7 +26,7 @@
             height="40"
             src="assets/logo.svg"
           />
-          <span class="text-xl font-bold"> Orange Cat </span>
+          <span class="text-xl font-bold">Orange Cat</span>
         </div>
       </a>
       <nav class="space-x-6 hidden md:flex">
@@ -60,7 +63,9 @@
         </select>
       </nav>
     </header>
-    <main class="flex justify-center items-center flex-wrap gap-8 p-6">
+    <main
+      class="flex-grow flex justify-center items-center flex-wrap gap-8 p-6"
+    >
       <div class="bg-white text-black rounded-lg shadow-lg p-6 w-80">
         <img
           alt="Laptop with Xperience Chatbot"
@@ -95,7 +100,7 @@
         <p>Lorem ipsum dolor sitamet,cons etur adipiscing elit.</p>
       </div>
     </main>
-    <footer class="text-gray-300 py-16 flex flex-col gap-16">
+    <footer class="text-gray-300 py-16 flex flex-col gap-16 mt-auto">
       <div class="w-10/12 h-px bg-white mx-auto"></div>
       <div class="w-10/12 mx-auto px-4">
         <div
@@ -103,7 +108,7 @@
         >
           <div class="mb-6 md:mb-0">
             <div class="flex items-center mb-2">
-              <img src="assets/logo.svg" alt="" />
+              <img src="assets/logo.svg" alt="Orange Cat Logo" />
               <span class="text-xl font-semibold ml-2">Orange Cat</span>
             </div>
             <p class="text-sm mb-4 max-w-md font-normal">
