removed the flex bug from team page

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
     />
     <script src="app.js"></script>
+    <style>
+      select option {
+        background-color: #151515;
+      }
+    </style>
   </head>
   <body class="bg-[#151515] text-white flex flex-col min-h-screen">
     <!-- Header -->
