--- a/lagrange.html
+++ b/lagrange.html
@@ -85,12 +85,18 @@
         powerful three-step process.
       </p>
       <div class="flex justify-between gap-4 md:flex-row flex-col">
-        <span class="md:text-2xl font-bold text-white tracking-wider"> Strategic Planning </span>
-        <span class="md:text-2xl font-bold text-white tracking-wider"> Intelligent coding </span>
-        <span class="md:text-2xl font-bold text-white tracking-wider"> Adaptive Code </span>
+        <span class="md:text-2xl font-bold text-white tracking-wider">
+          Strategic Planning
+        </span>
+        <span class="md:text-2xl font-bold text-white tracking-wider">
+          Intelligent coding
+        </span>
+        <span class="md:text-2xl font-bold text-white tracking-wider">
+          Adaptive Code
+        </span>
       </div>
     </main>
-    <footer class="text-gray-300 py-16 flex flex-col gap-16">
+    <footer class="text-gray-300 py-16 flex flex-col gap-16 mt-auto">
       <div class="w-10/12 h-px bg-white mx-auto"></div>
       <div class="w-10/12 mx-auto px-4">
         <div
@@ -98,7 +104,7 @@
         >
           <div class="mb-6 md:mb-0">
             <div class="flex items-center mb-2">
-              <img src="assets/logo.svg" alt="" />
+              <img src="assets/logo.svg" alt="Orange Cat Logo" />
               <span class="text-xl font-semibold ml-2">Orange Cat</span>
             </div>
             <p class="text-sm mb-4 max-w-md font-normal">
